<resources>
    <string name="app_name">VYCalculator</string>
    <string name="minus">-</string>
    <string name="b_one">1</string>
    <string name="b_two">2</string>
    <string name="b_three">3</string>
    <string name="b_plus">+</string>
    <string name="b_null">0</string>
    <string name="b_dot">.</string>
    <string name="b_equal">=</string>
    <string name="b_four">4</string>
    <string name="b_five">5</string>
    <string name="b_six">6</string>
    <string name="b_multiplicate">X</string>
    <string name="b_nine">9</string>
    <string name="b_eight">8</string>
    <string name="b_seven">7</string>
    <string name="b_divine">/</string>
    <string name="b_clear">AC</string>
    <string name="btn_destroy">Export as CSV</string>
</resources>